# visapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: sample_sales.csv
docs/: skill_design.md
docs/skills/: chart_planning_skill.md  cleaning_preparation_skill.md  dataset_understanding_skill.md  insight_explanation_skill.md  iteration_refinement_skill.md
src/vis_app/: __init__.py  app.py  charts.py  data_utils.py  llm.py  nl2viz.py
