[project]
name = "streamlit-nl-visualization-assignment"
version = "0.1.0"
description = "Course assignment: natural-language-driven visualization app built with Streamlit and uv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=6.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "numpy>=2.2.0,<3.0.0",
    "openai>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=2.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vis_app"]
